# oshepherd

./: .api.env.template  .gitignore  .worker.env.template  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  bump-and-release.yaml
examples/: pretty_streaming.py
examples/ts-scripts/: README.md  package.json  pretty_streaming.ts
oshepherd/: cli.py  redis_service.py
oshepherd/api/: app.py  config.py  gunicorn_app.py  health.py  network_data.py  server.py  utils.py
oshepherd/api/chat/: models.py  routes.py
oshepherd/api/embeddings/: models.py  routes.py
oshepherd/api/generate/: models.py  routes.py
oshepherd/api/ps/: models.py  routes.py
oshepherd/api/show/: models.py  routes.py
oshepherd/api/tags/: models.py  routes.py
oshepherd/api/version/: models.py  routes.py
oshepherd/common/: celery.py  lib.py  logging_config.py  ollama.py  redis.py  redis_service.py  utils.py
oshepherd/worker/: app.py  config.py  ollama_task.py  tasks.py  worker_data.py
tests/: test_e2e_api.py  test_e2e_streaming.py  test_streaming.py
