[project]
name = "oshepherd"
version = "0.0.6"
description = "The Oshepherd guiding the Ollama(s) inference orchestration."
readme = "README.md"
authors = [
    {name = "mnemonica.ai", email = "info@mnemonica.ai"},
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "celery",
    "click",
    "ollama",
    "amqp",
    "redis",
    "pydantic",
    "python-dotenv",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "packageName[tests, lint]",
    "build",
    "twine"
]
tests = [
  "pytest"
]
lint = [
  "black"
]

[project.urls]
Homepage = "https://github.com/mnemonica-ai/oshepherd"
Issues = "https://github.com/mnemonica-ai/oshepherd/issues"

[project.scripts]
oshepherd = "oshepherd.cli:main"

[tool.poetry]
name = "oshepherd"
version = "0.0.6"
description = "The Oshepherd guiding the Ollama(s) inference orchestration."
authors = ["mnemonica.ai <info@mnemonica.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
amqp = "==5.2.0"
annotated-types = "==0.6.0"
anyio = "==4.3.0"
billiard = "==4.2.0"
blinker = "==1.7.0"
celery = "==5.3.6"
certifi = "==2024.2.2"
charset-normalizer = "==3.3.2"
click = "==8.1.7"
click-didyoumean = "==0.3.1"
click-plugins = "==1.1.1"
click-repl = "==0.3.0"
Flask = "==3.0.3"
h11 = "==0.14.0"
httpcore = "==1.0.5"
httpx = "==0.27.0"
idna = "==3.6"
itsdangerous = "==2.1.2"
Jinja2 = "==3.1.3"
kombu = "==5.3.6"
MarkupSafe = "==2.1.5"
ollama = "==0.1.8"
prompt-toolkit = "==3.0.43"
pydantic = "==2.6.4"
pydantic_core = "==2.16.3"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.0.1"
redis = "==5.0.3"
requests = "==2.31.0"
six = "==1.16.0"
sniffio = "==1.3.1"
typing_extensions = "==4.11.0"
tzdata = "==2024.1"
urllib3 = "==2.2.1"
vine = "==5.1.0"
wcwidth = "==0.2.13"
Werkzeug = "==3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
